<resources>
    <string name="app_name">智汇餐点菜</string>

    <!--InitActivity-->
    <string name="init_activity_device">设备ID: %s</string>
    <string name="init_activity_loading">数据初始化中...</string>
    <string name="init_activity_loading_success">初始化成功</string>
    <string name="init_activity_loading_fail">初始化失败，点击重新初始化...</string>

    <!--LeadActivity-->
    <!--<string name="lead_activity_welcome">欢迎来到本店就餐，点击开桌开始就餐！</string>-->
    <string name="lead_activity_welcome">\t\t“大牛合”全称成都大牛合餐饮管理有限公司，我们是一家以经营潮汕鲜牛肉为主，融汇四川本土特色为一体的大型餐饮连锁品牌，致力于把最新鲜最健康最正宗的潮汕鲜牛肉带给大家。吃新鲜，就是在和时间赛跑，3小时从牧场到餐桌，现切现吃；瘦3-肥5-朥3，保留牛肉本身鲜甜的口感。而作为一家致力于发展连锁加盟的新兴品牌，大牛合一直秉承“健康看得见，良心做品质”的经营，期望给予每一位顾客品种丰富、口味独特、营养健康的产品和难忘的用餐体念。</string>
    <string name="lead_activity_is_vip">是否会员</string>
    <string name="lead_activity_is_yes">会员</string>
    <string name="lead_activity_is_no">非会员</string>

    <!--LockActivity-->
    <string name="lock_activity_hint">台桌【%s】已经被锁定</string>

    <!--LoginActivity-->
    <string name="login_activity_user_name_hint">卡号或手机号未填写</string>
    <string name="login_activity_password_hint">密码或验证码未填写</string>
    <string name="login_activity_over_time">请求超时</string>
    <string name="login_activity_again_send">重新发送</string>
    <string name="login_activity_again_send_later">%ds后重新发送</string>
    <string name="login_activity_input_phone">请先输入电话号码</string>
    <string name="login_activity_input_phone_hint">请输入卡号或手机号</string>
    <string name="login_activity_input_password_hint">请输入密码</string>
    <string name="login_activity_phone_hint">请输入手机号</string>
    <string name="login_activity_code_hint">请输入验证码</string>

    <string name="login_activity_number_login">账号登录</string>
    <string name="login_activity_short_cut_login">快捷登陆</string>
    <string name="login_activity_login">登录</string>

    <!--MainActivity-->
    <string name="main_activity_dialog_title">人数设置</string>
    <string name="main_activity_dialog_content">请输入人数</string>
    <string name="main_activity_dialog_positive">确定</string>
    <string name="main_activity_dialog_negative">取消</string>
    <string name="main_activity_setting_fail">设置失败，请重新设置！</string>
    <string name="main_activity_setting_person">人数设置中，请稍后...</string>

    <string name="main_activity_table">桌号</string>
    <string name="main_activity_person">就餐人数</string>
    <string name="main_activity_waitress">服务员</string>

    <!--TableActivity-->
    <string name="table_activity_loading">台桌加载中...</string>
    <string name="table_activity_loading_fail">加载失败,点击重新加载</string>
    <string name="table_activity_open_table_fail">打开台桌失败，请重试或换另外一张台桌</string>

    <!--BillFragment-->
    <string name="bill_fragment_loading">努力加载中...</string>
    <string name="bill_fragment_commit">数据提交中，请稍等...</string>
    <string name="bill_fragment_loading_fail">数据加载失败，点击刷新</string>
    <string name="bill_fragment_bill_fail">结账失败，请重新提交</string>

    <string name="bill_fragment_bill">结账</string>

    <!--CardFragment-->
    <string name="card_fragment_loading">努力加载中...</string>
    <string name="card_fragment_commit">数据提交中...</string>
    <string name="card_fragment_loading_fail">数据加载失败，点击刷新</string>
    <string name="card_fragment_commit_fail">提交失败，点击重新提交</string>


    <!--CartFragment-->
    <string name="cart_fragment_open_table">开桌</string>
    <string name="cart_fragment_choose_good">选好了</string>
    <string name="cart_fragment_dialog_title">信息确认</string>
    <string name="cart_fragment_dialog_content_person">就餐人数：%d人</string>
    <string name="cart_fragment_dialog_content_password">请输入开桌密码</string>
    <string name="cart_fragment_dialog_positive">确定</string>
    <string name="cart_fragment_dialog_negative">取消</string>
    <string name="cart_fragment_commit_fail">提交失败，点击重新提交</string>
    <string name="cart_fragment_dialog_food_hint_title">温馨提示</string>
    <string name="cart_fragment_dialog_food_hint_content">尊敬的顾客您好！\n【%s】为必选菜品，只有选择规定数量\n才能提交信息，还请谅解！</string>
    <string name="cart_fragment_dialog_food_hint_continue">继续点餐</string>
    <string name="cart_fragment_return_food">退菜中...</string>
    <string name="cart_fragment_return_food_fail">退菜失败</string>
    <string name="cart_fragment_return_food_success">退菜成功</string>
    <string name="cart_fragment_commit">数据提交中...</string>

    <!--DetailsFragment-->
    <string name="details_fragment_loading">努力加载中...</string>
    <string name="details_fragment_fail">加载失败，点击重新加载！</string>
    <string name="details_fragment_sales">月销量\t%d</string>

    <!--EvaluateFragment-->
    <string name="evaluate_fragment_loading">努力加载中...</string>
    <string name="evaluate_fragment_commit">评价提交中...</string>
    <string name="evaluate_fragment_commit_success">提交成功</string>
    <string name="evaluate_fragment_commit_fail">提交失败，请重新提交</string>
    <string name="evaluate_fragment_loading_fail">数据加载失败，点击刷新</string>

    <string name="evaluate_fragment_hint">感谢您来本店就餐！请您对本次就餐做出评价</string>

    <!--FavorableFragment-->
    <string name="favorable_fragment__loading">数据加载中...</string>
    <string name="favorable_fragment_loading_fail">数据加载失败，点击刷新</string>

    <string name="favorable_fragment_more">更多优惠</string>
    <string name="button_vip_no_select">立即享受</string>

    <!--MainFragment-->
    <string name="main_fragment_dialog_hint">温馨提示</string>
    <string name="main_fragment_dialog_merge_hint">\t\t如果你选择了并桌点餐，您每点一份餐将会给辅桌分发一份，但本桌数量显示任然是一份！</string>

    <string name="main_fragment_order_type_text_hint">请选择一种点菜方式</string>
    <string name="main_fragment_order_one">如果您是独自就餐，没有选择与其他餐桌合并；或者您已与其他餐桌合并，但想要各自点餐，请选择</string>
    <string name="main_fragment_order_more">如果您是与其它餐桌合并且想要一起点餐，请选择</string>
    <string name="main_fragment_one_order">单桌点餐</string>
    <string name="main_fragment_more_order">并桌点餐</string>
    <string name="main_fragment_choose_order_type">点菜方式选择</string>

    <!--OrderFragment-->
    <string name="order_fragment_loading">数据加载中...</string>
    <string name="order_fragment_loading_fail">数据加载失败，点击刷新</string>
    <string name="order_fragment_one_order">单桌点餐</string>
    <string name="order_fragment_more_order">并桌点餐</string>
    <string name="order_fragment_no_dishes">此分类下暂无菜品</string>

    <!--RequireFragment-->
    <string name="require_fragment_loading">数据加载中...</string>
    <string name="require_fragment_loading_fail">数据加载失败，点击刷新</string>

    <string name="require_fragment_person">就餐人数</string>

    <!--ServiceFragment-->
    <string name="service_fragment_init">正在初始化服务中...</string>
    <string name="service_fragment_cancel">挂断</string>
    <string name="service_fragment_service">服务员呼叫中，请耐心等待...</string>
    <string name="service_fragment_loading_fail">数据加载失败，点击刷新</string>

    <!--CommonString-->
    <string name="common_food">菜品</string>
    <string name="common_number">数量</string>
    <string name="common_price">单价</string>
    <string name="common_total_price">小计</string>
    <string name="warm_prompt">尊敬的顾客您好！\n您点的菜品过多，可根据情况适当点餐，避免食物浪费。</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_context_number">尊敬的顾客您好！\n\t\t您选择的菜品已经达到限制数量,不能再\n选择了，给你带来的不便还请谅解！</string>
    <string name="dialog_context_permiss">尊敬的顾客您好！\n\t\t您没有足够的权限点此菜品，具体事宜请你\n联系主桌！还请谅解！</string>
    <string name="dialog_context_over_number">尊敬的顾客您好！\n\t\t您所点的菜品单类已经超出规定数量，请选择其他喜欢菜\n品！还请谅解！</string>
    <string name="dialog_cancel">好的</string>
    <string name="favor_non_open">开桌后才能对菜品点赞</string>
    <string name="dialog_context_switch">尊敬的顾客您好！\n\t\t您确认允许单桌点餐吗？</string>
    <string name="toast_content_hint">正在切换中，请耐心等待...</string>
    <string name="dialog_context_switch_positive">继续</string>
    <string name="dialog_context_switch_negative">放弃</string>

    <!--VersionManager APK更新提示-->
    <string name="dialog_apk_update_title">版本更新</string>
    <string name="dialog_apk_update_positive">马上更新</string>
    <string name="dialog_apk_update_negative">暂不更新</string>
    <string name="dialog_apk_update_content">当前版本：%1$s\n最新版本：%2$s\n更新大小：%3$s\n更新内容：%4$s</string>
    <string name="dialog_apk_updating_title">版本更新</string>
    <string name="dialog_apk_updating_content">正在更新中...</string>
    <string name="dialog_apk_updating_negative">取消</string>


</resources>
