<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beyole="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table_info_parent"
    android:layout_width="match_parent"
    android:layout_height="@dimen/table_info_total"
    android:background="@color/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_info_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/hint_line"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/table_parent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/header_icon_desk" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_table"
                    android:textColor="@color/gray_c"
                    android:textSize="@dimen/table_item_text_hint_size" />

                <TextView
                    android:id="@+id/table_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/text_color_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/header_icon_waiter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_waitress"
                    android:textColor="@color/gray_c"
                    android:textSize="@dimen/table_item_text_hint_size" />

                <TextView
                    android:id="@+id/waitress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/text_color_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_person_parent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/header_icon_amounts" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_person"
                    android:textColor="@color/gray_c"
                    android:textSize="@dimen/table_item_text_hint_size" />

                <TextView
                    android:id="@+id/table_person_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/text_color_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/no_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/both_btn_login_nor"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/has_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <cn.sczhckj.order.overwrite.RoundImageView
                    android:id="@+id/header"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    beyole:imageType="circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textColor="@color/text_color_default" />

                    <ImageView
                        android:id="@+id/vip_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_line"
        android:layout_alignParentBottom="true"
        android:translationY="-5dp"
        android:background="@color/view_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_line"
        android:layout_alignParentBottom="true"
        android:background="@color/view_color" />


</RelativeLayout>
